<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- activity names strings -->
    <string name="app_name">Daily Scripture</string>
    <string name="activity_preferences">Settings</string>
    <!-- end activity names -->


    <!-- preferences strings -->
    <string name="pref_title">Preferences</string>
    <string name="pref_key_language">pref_lang</string>
    <string name="pref_key_load_img">pref_load_img</string>
    <string name="pref_key_daily_reminder">daily_reminder</string>
    <string name="pref_key_daily_reminder_time">daily_reminder_time</string>
    <string name="pref_key_about">pref_about</string>

    <!-- theme -->
    <string name="pref_theme_holo_dark">holoDark</string>
    <string name="pref_theme_holo_light">holoLight</string>
    <string name="pref_them_dialog_title">Choose Theme</string>


    <!-- language strings -->
    <string name="pref_title_lang">Language</string>
    <string name="pref_dialog_title_lang">Language</string>
    <string name="pref_lang_english">en</string>
    <string name="pref_lang_spanish">es</string>
    <string name="pref_lang_dutch">de</string>
    <string name="pref_lang_portuguess">pt</string>
    <string name="pref_lang_russian">ru</string>
    <!-- end preferences string -->


    <!-- menu strings -->
    <string name="menu_choose_date">Pick a Date</string>
    <string name="menu_view_on_web">View on VerseOfTheDay.com</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_copyright">Copyright</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_share">Share</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_rate">Rate</string>
    <!-- end menu strings -->

    <!-- save instance string -->
    <string name="saved_inst_year">year</string>
    <string name="saved_inst_month">month</string>
    <string name="saved_inst_day">day</string>

    <string name="saved_inst_verse">verse</string>
    <string name="saved_inst_book">book</string>
    <string name="saved_inst_thoughts">thoughts</string>
    <string name="saved_inst_prayer">prayer</string>
    <string name="saved_inst_author">author</string>
    <string name="saved_inst_text_date">text_date</string>

    <string name="label_thoughts">Thoughts...</string>
    <string name="label_prayer">Prayer...</string>
    <string name="label_copyright">© 1998-2013, Heartlight, Inc</string>

    <!-- spanish -->
    <string name="label_thoughts_es">Pensamientos sobre el Verso de Hoy</string>
    <string name="label_prayer_es">Mi oración</string>

    <!-- dutch -->
    <string name="label_thoughts_de">Gedanken zum Vers des Tages</string>
    <string name="label_prayer_de">Mein Gebet</string>

    <!-- portugues -->
    <string name="label_thoughts_pt">Pensamento:</string>
    <string name="label_prayer_pt">Oração:</string>

    <!-- russian -->
    <string name="label_thoughts_ru">Размышление над стихом дня</string>
    <string name="label_prayer_ru">Моя молитва</string>

    <string name="copyright_message">I do not own nor have I created any text found herein. This application was created
        by <a href="http://www.google.com/">Mooney Labs</a>. <br></br> Copyright from VerseOfTheDay.com: \'© 1998&#8211;2013,
        Heartlight, Inc. Verseoftheday.com is part of the Heartlight Network. All scripture quotations, unless otherwise
        indicated, are taken from the HOLY BIBLE, NEW INTERNATIONAL VERSION. © 1973, 1978, 1984 by International Bible
        Society. Used by permission of Zondervan Publishing House.\'</string>

    <string name="helpSenderAddress">justin@mooneylabs.com</string>
    <string name="helpSubject">Daily Scripture</string>
    <string name="helpMessage"></string>
    <string name="pref_key_theme">pref_key_theme</string><string name="main_button_retry">Retry</string><string name="main_text_no_connection">No Connection</string>
    <string name="label_about_activity">About Daily Scripture</string>

    <!-- about screen-->
    <string name="donate">Donate</string>

    <string name="about_first_row_free"><![CDATA[<justify><h1>Special Thanks To</h1>
        <a href="http://www.verseoftheday.com">VerseOfTheDay.com</a> - for providing the daily scripture. Daily Scripture
        would not be possible without it.
        <br><br>
        <a href="http://actionbarsherlock.com/">ActionBarSherlock</a> - an extension of the support library designed to
        facilitate the use of the action bar design pattern across all versions of Android with a single API.
        <br><br>
        <a href="https://code.google.com/p/android-ui-utils/">Android-UI-Utils</a> - for providing all of the icons
        <br><br>
        Like my app? Purchase the donate version to keep future support possible.</justify> ]]></string>

    <string name="about_first_row"><![CDATA[<justify>A <a href="http://www.mooneylabs.com/">Mooney Labs</a> product.
        <br><br> <h1>Special Thanks To</h1>
        <a href="http://www.verseoftheday.com">VerseOfTheDay.com</a> - for providing the daily scripture. Daily Scripture
        would not be possible without it.
        <br><br>
        <a href="http://actionbarsherlock.com/">ActionBarSherlock</a> - an extension of the support library designed to
        facilitate the use of the action bar design pattern across all versions of Android with a single API.
        <br><br>
        <a href="https://code.google.com/p/android-ui-utils/">Android-UI-Utils</a> - for providing all of the icons
        and images on the Play Store.
        </justify> ]]></string>
    <string name="pref_key_about_version">pref_key_about_version</string>
    <string name="pref_key_about_donate">pref_key_about_donate</string>
    <string name="pref_hidden_title_donated">Donated</string>
    <string name="pref_hidden_donated_summary">receive a daily reminder</string>
    <string name="pref_hidden_donated_title">Have You Donated</string>
    <string name="pref_hidden_has_rated_key">Rated</string>
    <string name="pref_hidden_ask_to_donate_key">AskToDonate</string>
    <string name="pref_hidden_ask_to_donate_summary">Bool for user asked to hide donate menu</string>
    <string name="pref_hidden_ask_to_donate_title">Ask to Donate</string>
    <string name="pref_hidden_has_rated_summary">Bool for if the user has the user rated</string>
    <string name="pref_hidden_has_rated_title">Has the User Rated?</string>
    <string name="pref_hidden_ask_to_rate_key">AskToRate</string>
    <string name="pref_hidden_ask_to_rate_summary">Bool Ask a user to rate</string>
    <string name="pref_hidden_ask_to_rate_title">Ask the User to Rate</string>
    <string name="pref_hidden_launch_count_key">LaunchCount</string>
    <string name="pref_hidden_launch_count_title">App Launch Count</string>
    <string name="pref_hidden_launch_count_summary">Keep track of launch count</string>
    <string name="pref_key_hidden_has_donated">Has User Donated</string>

</resources>